# ToDoList

./: .gitignore  README.md  design.html  design.md  index-v2.html  index.html  package-lock.json  package.json
.trae/specs/tauri-widget/: checklist.md  spec.md  tasks.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
